--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,9 @@ body {
   font-weight: 400;
   line-height: 24px;
 }
+.project-link-margin {
+  margin-left: 20px;
+}
 .project-container {
   margin-top: 65px;
 }
